# 2_sem

./: .gitignore  README.md  Tasks statment  check  input.txt
authotest/: proga.c  proga.cpp
bisektion-method/: CMakeLists.txt  bisection.c  bisection.h  functions.c  main.c  plot_bisection.py
bisektion_method/: CMakeLists.txt  functions.c  functions.h  main.c
include/: geometry.h
integral/: integral  integral.c
matrix-inverse/: Makefile  inverse  main.c  matrix.c  matrix.h
min-enclosing-circle/: Makefile  min_enclosing_circle
min-enclosing-circle/include/: geometry.h  random.h  welzl.h
min-enclosing-circle/src/: geometry.c  main.c  random.c  welzl.c
point-in-polygon/: Makefile
point-in-polygon/include/: polygon.h
point-in-polygon/src/: geometry.c  main.c
src/: polygon.c
strings/: input.txt  output.txt  strings  strings.c
